# cvmu3.0_iems

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
iems/: __init__.py  migrations.py
iems/achievements/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/attendence/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/auth/: blueprint.py  decorators.py  middlewares.py  repository.py  schemas.py  views.py
iems/base/: app.py  blueprints.py  config.py  decorators.py  exceptions.py  listners.py  logging.py  middlewares.py  models.py  postgres.py  response.py
iems/batch/: README.md  blueprint.py  exceptions.py  repository.py  schemas.py  views.py
iems/courses/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/events/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/external_exams/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/fees/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/files/: README.md  blueprint.py  repository.py  views.py
iems/leave/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/notices/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/parents/: README.md  blueprint.py  exceptions.py  repository.py  schemas.py  views.py
iems/placements/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/resources/: README.md  blueprint.py  repository.py  schemas.py  views.py
iems/semister/: README.md  blueprint.py  exceptions.py  repository.py  schemas.py  views.py
(+48 files in other folders)
