[project]
name = "iems"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dhwanil Shah", email = "itzdhwanil@gmail.com" }
]
dependencies = [
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "sanic>=24.12.0",
    "python-dotenv>=1.0.1",
    "structlog>=25.1.0",
    "orjson>=3.10.15",
    "argon2-cffi>=23.1.0",
    "uuid-utils>=0.10.0",
    "pyseto>=1.8.2",
    "email-validator>=2.2.0",
    "google-genai>=1.1.0",
    "google-ai-generativelanguage>=0.6.15",
    "google-generativeai>=0.8.4",
    "sanic-cors>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.rye.scripts]
dev = "sanic iems.base.app --dev"
migration = "python  -m iems.migrations"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["iems"]
